--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,17 @@
   }
 }
 
+.font-minecraft {
+  font-family: "VT323", monospace;
+}
+
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  overflow: hidden;
 }
+
+
